--- a/Touch-N-Stars/Options.xaml
+++ b/Touch-N-Stars/Options.xaml
@@ -21,6 +21,45 @@
                     Text="API Port " />
                 <TextBox Width="100" Text="{Binding Port}" />
             </StackPanel>
+             <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                <TextBlock Margin="0,5,0,5" Text="Network adresses: " />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock
+                        Width="100"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Text="Localhost" />
+                    <TextBlock Margin="0,5,0,5" VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="{Binding LocalAdress}" RequestNavigate="Hyperlink_RequestNavigate">
+                            <TextBlock VerticalAlignment="Center" Text="{Binding LocalAdress}" />
+                        </Hyperlink>
+                    </TextBlock>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock
+                        Width="100"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Text="IP Adress" />
+                    <TextBlock Margin="0,5,0,5" VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="{Binding LocalNetworkAdress}" RequestNavigate="Hyperlink_RequestNavigate">
+                            <TextBlock VerticalAlignment="Center" Text="{Binding LocalNetworkAdress}" />
+                        </Hyperlink>
+                    </TextBlock>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock
+                        Width="100"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Text="This Host" />
+                    <TextBlock Margin="0,5,0,5" VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="{Binding HostAdress}" RequestNavigate="Hyperlink_RequestNavigate">
+                            <TextBlock VerticalAlignment="Center" Text="{Binding HostAdress}" />
+                        </Hyperlink>
+                    </TextBlock>
+                </StackPanel>
+            </StackPanel>
         </StackPanel>
     </DataTemplate>
 </ResourceDictionary>
