--- a/Touch-N-Stars/Options.xaml
+++ b/Touch-N-Stars/Options.xaml
@@ -21,7 +21,14 @@
                     Text="API Port " />
                 <TextBox Width="100" Text="{Binding Port}" />
             </StackPanel>
-             <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                <TextBlock
+                    Margin="0,0,5,0"
+                    VerticalAlignment="Center"
+                    Text="Use Access-Control Headers" />
+                <CheckBox IsChecked="{Binding UseAccessControlHeader}" />
+            </StackPanel>
+            <StackPanel Margin="0,10,0,0" Orientation="Vertical">
                 <TextBlock Margin="0,5,0,5" Text="Network adresses: " />
                 <StackPanel Orientation="Horizontal">
                     <TextBlock
