--- a/Touch-N-Stars/Options.xaml
+++ b/Touch-N-Stars/Options.xaml
@@ -25,7 +25,8 @@
                 <TextBlock
                     Margin="0,0,5,0"
                     VerticalAlignment="Center"
-                    Text="Use Access-Control Headers" />
+                    Text="Use Access-Control Headers (Testing)" 
+                    ToolTip="This is mainly for testing purposes, you will probably never need to enable this"/>
                 <CheckBox IsChecked="{Binding UseAccessControlHeader}" />
             </StackPanel>
             <StackPanel Margin="0,10,0,0" Orientation="Vertical">
