--- a/Touch-N-Stars/Options.xaml
+++ b/Touch-N-Stars/Options.xaml
@@ -33,27 +33,8 @@
                     Margin="10,0,0,0"
                     Command="{Binding UpdateDefaultPortCommand}"
                     Content="Update Default Port"
-                    ToolTip="This updates the port the api is launched on, meaning that the api will always launch on that port"
+                    ToolTip="This updates the port the app is launched on, meaning that the app will always launch on that port"
                     Visibility="{Binding PortVisibility}" />
-            </StackPanel>
-            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
-                <TextBlock
-                    Margin="0,0,5,0"
-                    VerticalAlignment="Center"
-                    Text="Use Access-Control Headers " 
-                    ToolTip="This is mainly for testing purposes, you will probably never need to enable this"/>
-                <CheckBox IsChecked="{Binding UseAccessControlHeader}" />
-            </StackPanel>
-            <StackPanel Margin="0,5,0,0" Orientation="Vertical">
-                <TextBlock Margin="0,0,5,0" VerticalAlignment="Center" FontSize="12">
-                    <TextBlock.Inlines>
-                        <Run FontStyle="Italic" Text="Access-Control-Allow-Origin is part of the CORS rules and determines which websites are allowed to access a server's data." />
-                        <LineBreak />
-                        <Run FontStyle="Italic" Text="Without this permission, browsers block requests from other domains for security reasons." />
-                        <LineBreak />
-                        <Run FontStyle="Italic" Text="This is only relevant if the software is accessible via the Internet – in closed networks, such attacks from the outside are not possible." />
-                    </TextBlock.Inlines>
-                </TextBlock>
             </StackPanel>
 
             <StackPanel Margin="0,10,0,0" Orientation="Vertical">
