--- a/Touch-N-Stars/Options.xaml
+++ b/Touch-N-Stars/Options.xaml
@@ -36,6 +36,21 @@
                     ToolTip="This updates the port the app is launched on, meaning that the app will always launch on that port"
                     Visibility="{Binding PortVisibility}" />
             </StackPanel>
+            <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                <TextBlock
+                    Width="100"
+                    Margin="0,0,5,0"
+                    Text="Instance Name " />
+                <TextBox Width="200" Text="{Binding InstanceName}" />
+                <TextBlock
+                    Margin="10,5,0,0"
+                    VerticalAlignment="Center"
+                    Text="Broadcasts as" />
+                <TextBlock
+                    Margin="2,5,0,0"
+                    VerticalAlignment="Center"
+                    Text="{Binding MdnsServiceInstance}" />
+            </StackPanel>
 
             <StackPanel Margin="0,10,0,0" Orientation="Vertical">
                 <TextBlock Margin="0,5,0,5" Text="Network adresses: " />
